force-app/main/default/objects/QuoteBiddingInquiry__c/fields/AntitrustComplianceQ11__c.field-meta.xml
<CustomField>
    <fullName>AntitrustComplianceQ11__c</fullName>
    <inlineHelpText>同業他社との接触伺いを提出しない場合は「独禁法遵守チェック結果コメント」に理由を記載ください。</inlineHelpText>
    <label>(入札方法が「紙」の場合)同業他社との接触伺いを提出した</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>はい</fullName>
            </value>
            <value>
                <fullName>いいえ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>