force-app/main/default/objects/QuoteBiddingInquiry__c/fields/AntitrustComplianceQ1__c.field-meta.xml
<CustomField>
    <fullName>AntitrustComplianceQ1__c</fullName>
    <label>見積引合/入札指名について競合先や業界団体に話し、情報交換した</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>はい</fullName>
            </value>
            <value>
                <fullName>いいえ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>