force-app/main/default/objects/QuoteBiddingInquiry__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>申請者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ApplicantShip</relationshipName>
    <type>Lookup</type>
</CustomField>