force-app/main/default/objects/QuoteBiddingInquiry__c/fields/ApplicantManager__c.field-meta.xml
<CustomField>
    <fullName>ApplicantManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>申請者のマネージャー</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ApplicantManagers</relationshipName>
    <type>Lookup</type>
</CustomField>