force-app/main/default/objects/QuoteBiddingInquiry__c/fields/ApprovalAssigningTime__c.field-meta.xml
<CustomField>
    <fullName>ApprovalAssigningTime__c</fullName>
    <label>承認割り当て時間</label>
    <type>DateTime</type>
</CustomField>