force-app/main/default/objects/QuoteBiddingInquiry__c/fields/ApprovalAssignmentDateTime__c.field-meta.xml
<CustomField>
    <fullName>ApprovalAssignmentDateTime__c</fullName>
    <label>承認割り当て日時</label>
    <type>DateTime</type>
</CustomField>