force-app/main/default/objects/QuoteBiddingInquiry__c/fields/ApprovallStepsName__c.field-meta.xml
<CustomField>
    <fullName>ApprovallStepsName__c</fullName>
    <label>承認ステップ名</label>
    <length>30</length>
    <type>Text</type>
</CustomField>