force-app/main/default/objects/QuoteBiddingInquiry__c/fields/ApprovalPattern__c.field-meta.xml
<CustomField>
    <fullName>ApprovalPattern__c</fullName>
    <inlineHelpText>承認者を手動で指定したい場合は承認者手動設定を選択する</inlineHelpText>
    <label>承認者設定方法(自動／手動）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>自動設定</fullName>
            </value>
            <value>
                <fullName>手動設定</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>