force-app/main/default/objects/QuoteBiddingInquiry__c/fields/ApprovedInquirySharePointURL__c.field-meta.xml
<CustomField>
    <fullName>ApprovedInquirySharePointURL__c</fullName>
    <label>承認済伺いShare Point URL</label>
    <length>4000</length>
    <type>Html</type>
</CustomField>