force-app/main/default/objects/QuoteBiddingInquiry__c/fields/Approver10__c.field-meta.xml
<CustomField>
    <fullName>Approver10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>フリー設定最終承認者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approver10Ship</relationshipName>
    <type>Lookup</type>
</CustomField>