force-app/main/default/objects/QuoteBiddingInquiry__c/fields/Approver1__c.field-meta.xml
<CustomField>
    <fullName>Approver1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>申請部門承認者1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UserApprover1</relationshipName>
    <type>Lookup</type>
</CustomField>