force-app/main/default/objects/QuoteBiddingInquiry__c/fields/AttachedDoc__c.field-meta.xml
<CustomField>
    <fullName>AttachedDoc__c</fullName>
    <label>添付資料</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>見積書(案)</fullName>
            </value>
            <value>
                <fullName>WC回答書</fullName>
            </value>
            <value>
                <fullName>依頼書</fullName>
            </value>
            <value>
                <fullName>事管推部積算資料</fullName>
            </value>
            <value>
                <fullName>提案資料</fullName>
            </value>
            <value>
                <fullName>調達先見積回答書</fullName>
            </value>
            <value>
                <fullName>見積実績</fullName>
            </value>
            <value>
                <fullName>価格実績</fullName>
            </value>
            <value>
                <fullName>WC回答書(鑑)</fullName>
            </value>
            <value>
                <fullName>商談概要</fullName>
            </value>
            <value>
                <fullName>入札書(見積書)案</fullName>
            </value>
            <value>
                <fullName>内訳書案</fullName>
            </value>
            <value>
                <fullName>積算根拠資料</fullName>
            </value>
            <value>
                <fullName>発注仕様書</fullName>
            </value>
            <value>
                <fullName>ｼｽﾃﾑ構成図</fullName>
            </value>
            <value>
                <fullName>指名通知書</fullName>
            </value>
            <value>
                <fullName>入札公告資料</fullName>
            </value>
            <value>
                <fullName>当社との取引状況確認資料</fullName>
            </value>
            <value>
                <fullName>過去のJV施工実績</fullName>
            </value>
            <value>
                <fullName>同顧客等の元請施工実績</fullName>
            </value>
            <value>
                <fullName>経審評定通知書</fullName>
            </value>
            <value>
                <fullName>提出済見積価格</fullName>
            </value>
            <value>
                <fullName>公表価格</fullName>
            </value>
            <value>
                <fullName>見積依頼書</fullName>
            </value>
            <value>
                <fullName>応札価格設定根拠</fullName>
            </value>
            <value>
                <fullName>COMPANY</fullName>
            </value>
            <value>
                <fullName>原契約の応札伺い(鑑)</fullName>
                <isActive>false</isActive>
                <label>原契約の応札伺い(鑑)</label>
            </value>
            <value>
                <fullName>手数料算定書</fullName>
                <isActive>false</isActive>
                <label>手数料算定書</label>
            </value>
            <value>
                <fullName>特別受注伺い</fullName>
                <isActive>false</isActive>
                <label>特別受注伺い</label>
            </value>
            <value>
                <fullName>見積書提出伺</fullName>
                <isActive>false</isActive>
                <label>見積書提出伺</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>