force-app/main/default/objects/QuoteBiddingInquiry__c/fields/AttachedDocMemo__c.field-meta.xml
<CustomField>
    <fullName>AttachedDocMemo__c</fullName>
    <label>添付資料備考</label>
    <type>TextArea</type>
</CustomField>