force-app/main/default/objects/QuoteBiddingInquiry__c/fields/AttributeConfirmationResultRemarks__c.field-meta.xml
<CustomField>
    <fullName>AttributeConfirmationResultRemarks__c</fullName>
    <label>属性確認結果_備考</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>