force-app/main/default/objects/QuoteBiddingInquiry__c/fields/AttributeSurveyTarget__c.field-meta.xml
<CustomField>
    <fullName>AttributeSurveyTarget__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>属性確認対象は、当社または当社関係会社・代理店の1つ前。</inlineHelpText>
    <label>属性確認対象</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>見積・応札・手数料伺い (属性調査実施対象)</relationshipLabel>
    <relationshipName>AttributeSurveyTargetShip</relationshipName>
    <type>Lookup</type>
</CustomField>