force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BidAgency1MaxFee__c.field-meta.xml
<CustomField>
    <fullName>BidAgency1MaxFee__c</fullName>
    <label>代理店1_手数料(MAX)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>