force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BidAgency1StoreName__c.field-meta.xml
<CustomField>
    <fullName>BidAgency1StoreName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>代理店1_店名</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>R63</relationshipName>
    <type>Lookup</type>
</CustomField>