force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BidAgency1TradingStyle__c.field-meta.xml
<CustomField>
    <fullName>BidAgency1TradingStyle__c</fullName>
    <formula>IF (
RecordType.DeveloperName = &apos;M&apos;,
TEXT(  Opportunity__r.Handling__c  ), 
TEXT( DependentFeeInquiry__r.Agency1TradingStyle__c )
)</formula>
    <label>代理店1_取引形態</label>
    <type>Text</type>
</CustomField>