force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BidAgency2Fee__c.field-meta.xml
<CustomField>
    <fullName>BidAgency2Fee__c</fullName>
    <label>代理店2_手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>