force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BidAgency2StoreName__c.field-meta.xml
<CustomField>
    <fullName>BidAgency2StoreName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>代理店2_店名</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>BidAgency2StoreNameShip</relationshipName>
    <type>Lookup</type>
</CustomField>