force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BidAgency2TradingStyle4RecordTypeM__c.field-meta.xml
<CustomField>
    <fullName>BidAgency2TradingStyle4RecordTypeM__c</fullName>
    <label>代理店2_取引形態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>直扱</fullName>
            </value>
            <value>
                <fullName>委嘱</fullName>
            </value>
            <value>
                <fullName>協力</fullName>
            </value>
            <value>
                <fullName>仕切</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>