force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BidAgency2TradingStyle__c.field-meta.xml
<CustomField>
    <fullName>BidAgency2TradingStyle__c</fullName>
    <formula>TEXT( DependentFeeInquiry__r.Agency2TradingStyle__c )</formula>
    <label>代理店2_取引形態</label>
    <type>Text</type>
</CustomField>