force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BidAgency3MinFee__c.field-meta.xml
<CustomField>
    <fullName>BidAgency3MinFee__c</fullName>
    <label>代理店3_手数料(MIN)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>