force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BidAgency3StoreName__c.field-meta.xml
<CustomField>
    <fullName>BidAgency3StoreName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>代理店3_店名</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>BidAgency3StoreNameShip</relationshipName>
    <type>Lookup</type>
</CustomField>