force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BidAgency3TradingStyle__c.field-meta.xml
<CustomField>
    <fullName>BidAgency3TradingStyle__c</fullName>
    <formula>TEXT( DependentFeeInquiry__r.Agency3TradingStyle__c )</formula>
    <label>代理店3_取引形態</label>
    <type>Text</type>
</CustomField>