force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BidCheck__c.field-meta.xml
<CustomField>
    <fullName>BidCheck__c</fullName>
    <formula>IF(
    AND(
	    OR(
	    	RecordType.DeveloperName = &apos;O&apos;,
	    	RecordType.DeveloperName = &apos;SH&apos;
	    ),
	    OR(
		    AND(
		    	ISPICKVAL(PublicOrPrivateDemand__c,&apos;官需&apos;),
		    	ISPICKVAL(PrimeSubContractor__c,&apos;元請&apos;)
		    ),
		    ISPICKVAL(BidForm__c,&apos;協業&apos;)
	    )
    ),	
    True,
    False
)</formula>
    <label>入札案件（判定用）</label>
    <type>Checkbox</type>
</CustomField>