force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BidConditionsQ1__c.field-meta.xml
<CustomField>
    <fullName>BidConditionsQ1__c</fullName>
    <label>①価格設定基準（落札決定方法、調査基準・最低制限等）を十分確認した</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>はい</fullName>
            </value>
            <value>
                <fullName>いいえ</fullName>
            </value>
            <value>
                <fullName>入札対象外</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>