force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BidConditionsQ2__c.field-meta.xml
<CustomField>
    <fullName>BidConditionsQ2__c</fullName>
    <label>①確認結果記入欄</label>
    <type>TextArea</type>
</CustomField>