force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BidConditionsQ3__c.field-meta.xml
<CustomField>
    <fullName>BidConditionsQ3__c</fullName>
    <label>②提出書類（各種書類、総合評価方式必要書類等）を十分確認した</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BidConditionsQ1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>はい</fullName>
            </value>
            <value>
                <fullName>いいえ</fullName>
            </value>
            <value>
                <fullName>入札対象外</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>