force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BiddingDate__c.field-meta.xml
<CustomField>
    <fullName>BiddingDate__c</fullName>
    <inlineHelpText>期間がある場合は、締切日とする</inlineHelpText>
    <label>入札日・入札期限</label>
    <type>Date</type>
</CustomField>