force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BiddingMethod__c.field-meta.xml
<CustomField>
    <fullName>BiddingMethod__c</fullName>
    <inlineHelpText>「紙」を選択した場合は同業他社との接触伺いを実施ください。</inlineHelpText>
    <label>入札方法(紙/郵送/電子)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>紙</fullName>
            </value>
            <value>
                <fullName>郵送</fullName>
            </value>
            <value>
                <fullName>電子</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>