force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BiddingSystem__c.field-meta.xml
<CustomField>
    <fullName>BiddingSystem__c</fullName>
    <label>落札決定方式</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BidStyle__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>価格競争方式</fullName>
            </value>
            <value>
                <fullName>総合評価方式（技術提案なし）</fullName>
            </value>
            <value>
                <fullName>総合評価方式（技術提案あり）</fullName>
            </value>
            <value>
                <fullName>プロポーザル方式</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>-</fullName>
            </value>
            <value>
                <fullName>価格のみ</fullName>
                <isActive>false</isActive>
                <label>価格のみ</label>
            </value>
            <value>
                <fullName>最低価格方式</fullName>
                <isActive>false</isActive>
                <label>最低価格方式</label>
            </value>
            <value>
                <fullName>総合評価方式（標準）</fullName>
                <isActive>false</isActive>
                <label>総合評価方式（標準）</label>
            </value>
            <value>
                <fullName>総合評価方式（簡易・施工計画有）</fullName>
                <isActive>false</isActive>
                <label>総合評価方式（簡易・施工計画有）</label>
            </value>
            <value>
                <fullName>総合評価方式（簡易・施工計画無）</fullName>
                <isActive>false</isActive>
                <label>総合評価方式（簡易・施工計画無）</label>
            </value>
            <value>
                <fullName>総合評価方式（高度技術提案型）</fullName>
                <isActive>false</isActive>
                <label>総合評価方式（高度技術提案型）</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>