force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BiddingTime__c.field-meta.xml
<CustomField>
    <fullName>BiddingTime__c</fullName>
    <inlineHelpText>入札締切時刻をhhmm半角で入力</inlineHelpText>
    <label>入札時間</label>
    <length>5</length>
    <type>Text</type>
</CustomField>