force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BidEntryApplicationPeriod__c.field-meta.xml
<CustomField>
    <fullName>BidEntryApplicationPeriod__c</fullName>
    <label>入札参加申請期限（JV申請含）</label>
    <type>Date</type>
</CustomField>