force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BidForm__c.field-meta.xml
<CustomField>
    <fullName>BidForm__c</fullName>
    <defaultValue>&quot;単独&quot;</defaultValue>
    <label>応札体制</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>単独</fullName>
                <default>true</default>
                <label>単独</label>
            </value>
            <value>
                <fullName>JV</fullName>
            </value>
            <value>
                <fullName>協業</fullName>
            </value>
            <value>
                <fullName>​公募型指名競争</fullName>
                <isActive>false</isActive>
                <label>​公募型指名競争</label>
            </value>
            <value>
                <fullName>その他</fullName>
                <isActive>false</isActive>
                <label>その他</label>
            </value>
            <value>
                <fullName>一般競争入札</fullName>
                <isActive>false</isActive>
                <label>一般競争入札</label>
            </value>
            <value>
                <fullName>公募型随契</fullName>
                <isActive>false</isActive>
                <label>公募型随契</label>
            </value>
            <value>
                <fullName>指名競争入札</fullName>
                <isActive>false</isActive>
                <label>指名競争入札</label>
            </value>
            <value>
                <fullName>民間ネゴ</fullName>
                <isActive>false</isActive>
                <label>民間ネゴ</label>
            </value>
            <value>
                <fullName>民間見積合わせ</fullName>
                <isActive>false</isActive>
                <label>民間見積合わせ</label>
            </value>
            <value>
                <fullName>随契</fullName>
                <isActive>false</isActive>
                <label>随契</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>