force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BidName__c.field-meta.xml
<CustomField>
    <fullName>BidName__c</fullName>
    <label>入札名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>