force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BidOpeningDay__c.field-meta.xml
<CustomField>
    <fullName>BidOpeningDay__c</fullName>
    <label>開札日</label>
    <type>Date</type>
</CustomField>