force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BidOpeningTime__c.field-meta.xml
<CustomField>
    <fullName>BidOpeningTime__c</fullName>
    <inlineHelpText>hhmm(半角)にて記入</inlineHelpText>
    <label>開札時間</label>
    <length>5</length>
    <type>Text</type>
</CustomField>