force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BidResult__c.field-meta.xml
<CustomField>
    <fullName>BidResult__c</fullName>
    <inlineHelpText>受注を選択し保存すると自動で受注者に三菱電機が入ります。</inlineHelpText>
    <label>応札結果</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>受注</fullName>
            </value>
            <value>
                <fullName>失注</fullName>
            </value>
            <value>
                <fullName>辞退</fullName>
            </value>
            <value>
                <fullName>不調</fullName>
            </value>
            <value>
                <fullName>中止</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>