force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BidResultMemo__c.field-meta.xml
<CustomField>
    <fullName>BidResultMemo__c</fullName>
    <label>応札結果_備考</label>
    <type>TextArea</type>
</CustomField>