force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BidStyle__c.field-meta.xml
<CustomField>
    <fullName>BidStyle__c</fullName>
    <label>入札方式</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>一般競争入札</fullName>
            </value>
            <value>
                <fullName>指名競争入札</fullName>
            </value>
            <value>
                <fullName>公募型指名競争入札</fullName>
            </value>
            <value>
                <fullName>随意契約</fullName>
            </value>
            <value>
                <fullName>公募型随意契約</fullName>
            </value>
            <value>
                <fullName>公募型企画競争</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>官・直（一般）</fullName>
                <isActive>false</isActive>
                <label>官・直（一般）</label>
            </value>
            <value>
                <fullName>官・直（他入札）</fullName>
                <isActive>false</isActive>
                <label>官・直（他入札）</label>
            </value>
            <value>
                <fullName>官・直（公募)</fullName>
                <isActive>false</isActive>
                <label>官・直（公募)</label>
            </value>
            <value>
                <fullName>官・直（指名）</fullName>
                <isActive>false</isActive>
                <label>官・直（指名）</label>
            </value>
            <value>
                <fullName>官・直（随契）</fullName>
                <isActive>false</isActive>
                <label>官・直（随契）</label>
            </value>
            <value>
                <fullName>官・間（GC）</fullName>
                <isActive>false</isActive>
                <label>官・間（GC）</label>
            </value>
            <value>
                <fullName>官・間（SC）</fullName>
                <isActive>false</isActive>
                <label>官・間（SC）</label>
            </value>
            <value>
                <fullName>官・間（その他）</fullName>
                <isActive>false</isActive>
                <label>官・間（その他）</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>