force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <label>BU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>水環境</fullName>
            </value>
            <value>
                <fullName>施設</fullName>
            </value>
            <value>
                <fullName>官需</fullName>
            </value>
            <value>
                <fullName>官公情報</fullName>
            </value>
            <value>
                <fullName>通シ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>