force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BudgetInfo__c.field-meta.xml
<CustomField>
    <fullName>BudgetInfo__c</fullName>
    <label>入札情報_備考</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>