force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BUPromotionManager__c.field-meta.xml
<CustomField>
    <fullName>BUPromotionManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BU推進部長</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Mitsu</relationshipName>
    <type>Lookup</type>
</CustomField>