force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BusinessCategory__c.field-meta.xml
<CustomField>
    <fullName>BusinessCategory__c</fullName>
    <inlineHelpText>BU・部門の経営施策にて「新規」「拡販」と位置付けているものを除き、「既存事業」を選択</inlineHelpText>
    <label>③事業の新規性</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>既存事業</fullName>
            </value>
            <value>
                <fullName>新規・拡販事業</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>