force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BusinessManagementPromotionB__c.field-meta.xml
<CustomField>
    <fullName>BusinessManagementPromotionB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>事管推部長</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QuoteBiddingInquiry_B</relationshipName>
    <type>Lookup</type>
</CustomField>