force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BusinessManagementPromotionBConcurrent__c.field-meta.xml
<CustomField>
    <fullName>BusinessManagementPromotionBConcurrent__c</fullName>
    <formula>BusinessManagementPromotionB__r.SectionManagerGeneralManagerConcurrent__c</formula>
    <label>事管推部長が課長・部長兼任</label>
    <type>Checkbox</type>
</CustomField>