force-app/main/default/objects/QuoteBiddingInquiry__c/fields/BusinessManagementPromotionSupplementCom__c.field-meta.xml
<CustomField>
    <fullName>BusinessManagementPromotionSupplementCom__c</fullName>
    <label>事管推補足コメント</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>