force-app/main/default/objects/QuoteBiddingInquiry__c/fields/CategoryCoefficient__c.field-meta.xml
<CustomField>
    <fullName>CategoryCoefficient__c</fullName>
    <label>①～③による新規性判定</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>