force-app/main/default/objects/QuoteBiddingInquiry__c/fields/CollaborationCompanyBiddingPriceProposal__c.field-meta.xml
<CustomField>
    <fullName>CollaborationCompanyBiddingPriceProposal__c</fullName>
    <label>協業社応札価格案</label>
    <length>255</length>
    <type>Text</type>
</CustomField>