force-app/main/default/objects/QuoteBiddingInquiry__c/fields/CommercialDistributionNumber__c.field-meta.xml
<CustomField>
    <fullName>CommercialDistributionNumber__c</fullName>
    <description>伺い商流明細のレコード数をカウントする、入力規則用の項目</description>
    <label>商流数</label>
    <summaryForeignKey>InquiryCommercialDistributionDetail__c.QuoteBiddingInquiry__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>