force-app/main/default/objects/QuoteBiddingInquiry__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>競合他社の状況</label>
    <length>80</length>
    <type>Text</type>
</CustomField>