force-app/main/default/objects/QuoteBiddingInquiry__c/fields/ConcurrentManagerConcurrentPostFlag__c.field-meta.xml
<CustomField>
    <fullName>ConcurrentManagerConcurrentPostFlag__c</fullName>
    <formula>IF( Applicant__c != null,  Applicant__r.ConcurrentManager__r.SectionManagerGeneralManagerConcurrent__c ,  Owner:User.ConcurrentManager__r.SectionManagerGeneralManagerConcurrent__c )</formula>
    <label>兼務マネージャが課長・部長兼任</label>
    <type>Checkbox</type>
</CustomField>