force-app/main/default/objects/QuoteBiddingInquiry__c/fields/ConfirmationResultTargetAttributeSurvey__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationResultTargetAttributeSurvey__c</fullName>
    <inlineHelpText>当社の関係会社・代理店の1つ先が対象</inlineHelpText>
    <label>備考（複数ルートに提出する場合は商流NO.2以降の一次顧客の確認結果を記載）</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>