force-app/main/default/objects/QuoteBiddingInquiry__c/fields/ConstructionClassification__c.field-meta.xml
<CustomField>
    <fullName>ConstructionClassification__c</fullName>
    <label>工事区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新設</fullName>
            </value>
            <value>
                <fullName>更新（自社既設）</fullName>
            </value>
            <value>
                <fullName>更新（他社既設）</fullName>
            </value>
            <value>
                <fullName>更新（蓄電池）</fullName>
            </value>
            <value>
                <fullName>増設</fullName>
            </value>
            <value>
                <fullName>修繕・改造</fullName>
            </value>
            <value>
                <fullName>保守</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>他社保守</fullName>
                <isActive>false</isActive>
                <label>他社保守</label>
            </value>
            <value>
                <fullName>他社修繕</fullName>
                <isActive>false</isActive>
                <label>他社修繕</label>
            </value>
            <value>
                <fullName>他社増設</fullName>
                <isActive>false</isActive>
                <label>他社増設</label>
            </value>
            <value>
                <fullName>他社改造</fullName>
                <isActive>false</isActive>
                <label>他社改造</label>
            </value>
            <value>
                <fullName>他社更新</fullName>
                <isActive>false</isActive>
                <label>他社更新</label>
            </value>
            <value>
                <fullName>他社調査</fullName>
                <isActive>false</isActive>
                <label>他社調査</label>
            </value>
            <value>
                <fullName>当社保守</fullName>
                <isActive>false</isActive>
                <label>当社保守</label>
            </value>
            <value>
                <fullName>当社修繕</fullName>
                <isActive>false</isActive>
                <label>当社修繕</label>
            </value>
            <value>
                <fullName>当社増設</fullName>
                <isActive>false</isActive>
                <label>当社増設</label>
            </value>
            <value>
                <fullName>当社改造</fullName>
                <isActive>false</isActive>
                <label>当社改造</label>
            </value>
            <value>
                <fullName>当社更新</fullName>
                <isActive>false</isActive>
                <label>当社更新</label>
            </value>
            <value>
                <fullName>当社調査</fullName>
                <isActive>false</isActive>
                <label>当社調査</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>